--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="title" content="SoggyByte Games">
     <meta name="keyword" content="Game Developers">
     <title>SoggyByte Games</title>
-
+    <!-- Google Search Logo -->
     <script type="application/ld+json">
         {
           "@context": "https://schema.org",
