--- a/index.html
+++ b/index.html
@@ -165,12 +165,13 @@
                     <img src="Images/Player-Jump.gif" alt="Jump" class="contact-image">
                 </div>
 
-                <form action="#" class="contact-form">
-                    <input type="text" placeholder="Your name" class="form-input" required>
-                    <input type="e-mail" placeholder="Your e-mail" class="form-input" required>
-                    <textarea placeholder="Your message" class="form-input" required></textarea>
-                    <button class="submit-button">Submit</button>
+                <form id="contact-form" class="contact-form">
+                    <input type="text" name="user_name" placeholder="Your name" class="form-input" required>
+                    <input type="email" name="user_email" placeholder="Your e-mail" class="form-input" required>
+                    <textarea name="message" placeholder="Your message" class="form-input" required></textarea>
+                    <button type="submit" class="submit-button">Submit</button>
                 </form>
+
 
             </div>
         </section>
@@ -189,7 +190,7 @@
                 </div>
 
                 <p class="policy-text">
-                    <a href="#" class="policy-link">Privacy Policy</a>
+                    <a href="privacyPolicy.html" class="policy-link">Privacy Policy</a>
                 </p>
 
             </div>
@@ -201,6 +202,25 @@
 
     <!-- Main Script -->
     <script src="script.js"></script>
+
+    <!-- Contact Us Script -->
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script>
+        (function () {
+            emailjs.init("v_YzD1xlpM8eealLz"); // <--- kendi user ID'nle değiştir
+        })();
+
+        document.getElementById("contact-form").addEventListener("submit", function (e) {
+            e.preventDefault();
+            emailjs.sendForm("service_wvxlry4", "template_r3z5zru", this)  // kendi ID'lerinle değiştir
+                .then(function () {
+                    alert("Message sent!");
+                    document.getElementById("contact-form").reset();
+                }, function (error) {
+                    alert("Error " + JSON.stringify(error));
+                });
+        });
+    </script>
 </body>
 
 </html>
